--- a/Starter.WPF/MainWindow.xaml
+++ b/Starter.WPF/MainWindow.xaml
@@ -99,7 +99,7 @@
                     <TextBox Height="20" Margin="0,-5,0,10" Text="{Binding DetailedCat.Name }"
                              extensions:FocusExtension.IsFocused="{Binding IsNameFocused.Value}"
                              CaretIndex="{x:Static sys:Int32.MaxValue}"/>
-                    <ListBox Margin="0,0,0,0" Name="AbilityListBox" SelectedItem="{Binding DetailedCat.AbilityId}"
+                    <ListBox Margin="0,0,0,0" Name="AbilityListBox" SelectedItem="{Binding DetailedCat.Ability}"
                      ItemsSource="{Binding Source={StaticResource AbilityValues}}"
                      ItemContainerStyle="{StaticResource AbilitiesStyle}" />
                 </StackPanel>
